XMLtoCSV/objects/unpackaged/objects/Suggestion_Tag_vod__c.object
<CustomObject>
    <description>Stores information on key suggestion attributes</description>
    <fields>
        <fullName>Detail_Group_vod__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Used to define which product groups are associated with a Suggestion. Lookup to the Product Group on Product_vod.</description>
        <label>Detail Group</label>
        <referenceTo>Product_vod__c</referenceTo>
        <relationshipLabel>Suggestion Tags</relationshipLabel>
        <relationshipName>Suggestion_Tags_vod</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Driver_vod__c</fullName>
        <description>Used to define which data drivers are associated with a suggestion</description>
        <label>Driver</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Email_Fragment_order_vod__c</fullName>
        <description>Specifies order in which attachments are attached to email template</description>
        <label>Email Fragment Order</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Email_Fragment_vod__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Used to capture fragment ids associated to template in suggestions</description>
        <label>Email Fragment</label>
        <referenceTo>Approved_Document_vod__c</referenceTo>
        <relationshipLabel>Suggestion Tags</relationshipLabel>
        <relationshipName>Suggestion_Tags_vod</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>External_ID_vod__c</fullName>
        <description>External ID</description>
        <externalId>true</externalId>
        <label>External ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_vod__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Used to define which products are associated with a Suggestion. Lookup to the Product/s in the Product Catalog.(Detail, Detail Topic, Detail Group)</description>
        <label>Product</label>
        <referenceTo>Product_vod__c</referenceTo>
        <relationshipLabel>Suggestion Tags (Product)</relationshipLabel>
        <relationshipName>Suggestion_Tags1_vod</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Record_Type_Name_vod__c</fullName>
        <description>Designates what record type suggestion tag uses</description>
        <label>Record Type Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Suggestion_vod__c</fullName>
        <description>Used to associate tag attributes to suggestion</description>
        <label>Suggestion</label>
        <referenceTo>Suggestion_vod__c</referenceTo>
        <relationshipLabel>Suggestion Tags</relationshipLabel>
        <relationshipName>Suggestion_Tags_vod</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>Suggestion Tag</label>
    <nameField>
        <displayFormat>SI-{000000000}</displayFormat>
        <label>Suggestion Tag Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Suggestion Tags</pluralLabel>
    <recordTypes>
        <fullName>Driver_vod</fullName>
        <active>true</active>
        <description>Record type to support data driven Suggestions</description>
        <label>Driver_vod</label>
    </recordTypes>
    <recordTypes>
        <fullName>Email_Fragment_vod</fullName>
        <active>true</active>
        <description>Record type to support email fragment assignments</description>
        <label>Email_Fragment_vod</label>
    </recordTypes>
    <recordTypes>
        <fullName>Product_vod</fullName>
        <active>true</active>
        <description>Record type to support product driven suggestions</description>
        <label>Product_vod</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>